# patchelfcrc

./: .gitmodules  CMakeLists.txt  crc.c  elfpatch.c  gen-version-string.sh  gen_version_header.sh  main.c  named_crcs.c  reporting.c  version.c
AUR/: PKGBUILD
doxygen/: Doxyfile.in  gen-version-string.sh
include/patchelfcrc/: crc-datatypes.h  crc-output-struct.h  crc.h  elfpatch.h  named_crcs.h  reporting.h  version.h  xml.h
man/: CMakeLists.txt  patchelfcrc.1.md
resources/: schema.xsd
src/: crc.c  elfpatch.c  main.c  named_crcs.c  reporting.c  xml.c
